--- a/css/common.css
+++ b/css/common.css
@@ -43,6 +43,7 @@ h3 {
     font-weight: 400;
 }
 
+/* layout */
 .inner {
     padding: 70px 45px;
     color: #fff;
@@ -55,4 +56,18 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.text-box {
+    width: 52%;
+    height: 100%;
+    padding: 0 3rem 0 0;
+}
+
+.img-box {
+    position: relative;
+    width: 48%;
+    height: 100%;
+    display: flex;
+    overflow: hidden;
 }
