--- a/css/common.css
+++ b/css/common.css
@@ -28,7 +28,7 @@ button {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 3.125rem;
     line-height: normal;
 }
 
@@ -70,4 +70,38 @@ h3 {
     height: 100%;
     display: flex;
     overflow: hidden;
+}
+
+@media only screen and (min-width: 550px) and (max-width: 949px){
+    h2 {
+        font-size: 1.25rem;
+    }
+}
+
+@media only screen and (min-width: 550px) and (max-width: 949px), 
+only screen and (min-width: 400px) and (max-width: 549px), 
+only screen and (min-width: 350px) and (max-width: 399px), 
+only screen and (max-width: 349px) {
+    .inner {
+        padding: 50px 5%;
+    }
+    .container {
+        flex-direction: column;
+    }
+    .text-box {
+        width: 100%;
+        padding: 0;
+        text-align: center;
+    }
+    .img-box {
+        width: 100%;
+        max-width: 600px;
+        margin-top: 1em;
+    }
+    h1 {
+        font-size: 1.75rem;
+    }
+    h2 {
+        font-size: 1.125rem;
+    }
 }
